--- a/css/style.css
+++ b/css/style.css
@@ -2613,3 +2613,12 @@ img.mfp-img{
 }
 
 
+
+
+
+.color-white {
+  color: white !important;
+  font-weight: bold;
+  font-size: 20px;
+  padding-top: 40px;
+}
